# Bloom

./: .dockerignore  .gitignore  Dockerfile  ROADMAP.md  TODO.md  application.py  compose.yml  demo.sqlite  example_app.py  perf_test.py  pyproject.toml  requirements.txt  run_server.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.md
.github/prompts/: default.prompt.md  general.prompt.md
backend/: application.py
backend/settings/: __init__.py
bloom/: __init__.py  __main__.py  application.py  asgi.py  exceptions.py  logger.py  request.py
bloom/config/: __init__.py  binder.py  env.py  loader.py  manager.py  properties.py
docs/: architecture-patterns.md  cli-reference.md  config-properties.md  database-orm.md  dependency-injection-scopes.md  dependency-injection.md  event-system.md  factory-chain-dependency-graph.md  lifecycle-flow.md  method-advice-pattern.md  prototype-scope.md  proxy-system.md  query-aggregate.md  request-scope-pool.md  task-system.md  testing-bloomtestcase.md  testing-testcase.md  tracing-system.md
examples/: __init__.py  circular_dependency_app.py  complex_dependencies_app.py  distributed_task_example.py  distributed_task_redis_example.py  example_app.py  example_openapi_app.py  orm_example.py  task_example_app.py  tracing_example.py
tests/: conftest.py  test_advice.py  test_application.py  test_asgi.py  test_auth_middleware.py  test_bloom_testcase.py  test_cli.py  test_complex_di.py  test_config.py  test_container.py  test_container_manager.py  test_container_transfer.py  test_cors_middleware.py  test_decorators.py  test_decorators_scope.py  test_dependency_graph.py  test_distributed_event.py  test_distributed_task.py  test_env.py  test_error_handler.py  test_events.py  test_factory.py  test_injection.py  test_lazy.py  test_lifecycle.py  test_messaging.py  test_middleware.py  test_middleware_chain.py  test_multi_worker.py  test_multiprocess_profile.py  test_openapi.py  test_parallel_init.py  test_param_resolver.py  test_params.py  test_profiling.py  test_proxy.py  test_pytest_plugin.py  test_queue_app.py  test_request_scope.py  test_route.py  (+12 more)
vessel/: __init__.py  application.py
(+578 files in other folders)
