[project]
name = "bloom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pyjwt>=2.10.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
bloom = "bloom.__main__:main"

[tool.setuptools.package-data]
"bloom.templates" = ["**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "performance: 성능 벤치마크 테스트 (기본 실행에서 제외)",
]
addopts = "-m 'not performance'"

[dependency-groups]
dev = [
    "pyjwt>=2.10.1",
]
