[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloom"
version = "0.1.0"
description = "A Spring-inspired Python DI container framework with ASGI web layer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "farrar142"}
]
keywords = ["dependency-injection", "di", "framework", "asgi", "web"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.13.2",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pyjwt>=2.10.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
bloom = "bloom.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bloom*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
"bloom.templates" = ["**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "performance: 성능 벤치마크 테스트 (기본 실행에서 제외)",
]
addopts = "-m 'not performance'"

[dependency-groups]
dev = [
    "pyjwt>=2.10.1",
]
